# qora-fl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
benches/: aggregation.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/qora/: __init__.py  strategy.py
bindings/python/tests/: test_aggregator.py
docs/: PERFORMANCE.md  TUNING.md
examples/: adaptive_trim_eval.py  attack_evaluation.py  benchmark_overhead.py  compare_methods.rs  mnist_poisoning_demo.py  quickstart.rs  reputation_study.py  scalability_bench.py
src/: error.rs  lib.rs  lib.rs.old
src/aggregators/: adaptive.rs  fedavg.rs  krum.rs  median.rs  mod.rs  trimmed_mean.rs
src/math/: mod.rs  norms.rs
src/reputation/: mod.rs  store.rs
src/verification/: audit.rs  krum_condition.rs  mod.rs  norm_bound.rs
tests/: aggregator_tests.rs
