[package]
name = "qora-fl"
version = "0.3.0"
edition = "2021"
authors = ["Cavin Krenik <cavinkrenik5@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Qora: Quorum-Oriented Robust Aggregation for Federated Learning"
repository = "https://github.com/CavinKrenik/qora-fl"
keywords = ["federated-learning", "byzantine-tolerance", "machine-learning", "quorum"]
categories = ["algorithms", "cryptography", "mathematics"]
readme = "README.md"

[dependencies]
# Core
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
rayon = "1.8"

# Fixed-point math for Krum
fixed = "1.24"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]
optional = true

[dependencies.numpy]
version = "0.20"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
python = ["pyo3", "numpy", "serde_json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[[bench]]
name = "aggregation"
harness = false
